# docker-image-manager

./: README.md  backend.config  compose.yml  frontend.config
apps/backend/: .gitignore  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/api/dependencies/: authentication.py  exceptions.py
apps/backend/app/api/errors/: http_error.py  validation_error.py
apps/backend/app/cache/: events.py
apps/backend/app/core/: events.py
apps/backend/app/core/settings/: app.py  development.py  test.py
apps/backend/app/db/: client.py  events.py
apps/backend/app/resources/: strings.py
apps/backend/app/utils/: lifecycle.py  patterns.py  text.py
apps/backend/compose/local/fastapi/: Dockerfile
apps/backend/compose/prod/fastapi/: Dockerfile
apps/backend/scripts/: test
apps/backend/tests/: conftest.py
apps/frontend/: package.json
apps/frontend/compose/dev/: Dockerfile
apps/frontend/compose/prod/: Dockerfile
apps/frontend/src/: App.tsx  index.tsx
apps/frontend/src/components/header/: index.tsx
apps/frontend/src/pages/images/: create.tsx  edit.tsx  index.ts  list.tsx  show.tsx
apps/frontend/src/utility/: supabaseClient.ts
apps/supabase/: config.toml
